--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "firebase": "^7.15.3",
+    "firebase-admin": "^8.12.1",
     "nodemon": "^1.19.4",
     "socket.io": "^2.2.0"
   }
